[NguyenDangPhuoc] add scrollbar for statistics, fix cart icon, edit footer UI

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3915,10 +3915,11 @@ button.disible {
 
 }
 
-span.px-2.bg-danger.border-0.text-light.sum-num-cart {
+span.p-1.bg-danger.border-0.text-light.sum-num-cart {
   position: absolute;
   top: -14px;
   height: fit-content;
   width: fit-content;
   border-radius: 100%;
+  min-width: 30px;
 }
